tests/language_tests/pass/0064_nested_while_with_inner_break.ee
fn main() {
    let outer = 0;
    while (outer < 2) {
        outer = outer + 1;
        let inner = 0;
        while (true) {
            inner = inner + 1;
            print(inner);
            break;
        }
        print(outer);
    }
}
