tests/language_tests/fail/0038_while_keyword_as_variable_name.ee
fn main() {
    let while = 1;
}
